             ones used on Windows.

 * win32/:
   - [MISC]  Remove the rather ugly HTML version of the man page from the
             distribution, and provide a much better PDF version instead.

 * various:
   - [ADD]   Allow ezstream to use TagLib for reading metadata from media
             files. TagLib (libtag_c) is now an optional dependency.
   - [ADD]   New <metadata_progname> configuration option, which causes
             metadata to be read from the output of an external program or
             script.
   - [ADD]   New runtime control via the SIGUSR2 signal, which triggers reading
             of fresh metadata information from <metadata_progname> (metadata
             is always read at song changes.)
   - [ADD]   New <metadata_format> configuration option, to customize metadata
             strings when used with the new <metadata_progname> feature.
   - [ADD]   New '@a@' and '@t@' placeholders for separate artist and title
             metadata in de-/encoder commands.



Changes in 0.3.0, released on 2007-03-05:

 * The original author, Ed Zaleski, hands over ezstream maintainership to
   Moritz Grimm.

 * New features:
   - Playlist shuffling support, enabled via the new <shuffle> configuration
     option.
   - Playlist scripting support: Indicate that the executable in <filename>
     should be run each time to get a new media filename to stream, by setting
     the new <playlist_program> configuration option to 1.
   - New <stream_once> configuration option, which makes ezstream play a media
     file or playlist once and then exit.
   - New <reconnect_tries> option to restrict the number of reconnection
     attempts to a server in case the connection goes down.
   - Add feature to skip the currently streaming track, done by sending the
     SIGUSR1 signal to the ezstream process.
   - New command line option `-q': Suppress standard error output from external
     de-/encoders.
   - New command line option `-v': Produce more verbose output.